# STAT409Project

./: .gitignore  Interview 09May25  Organ.csv  README.md
Codes/: README.md  pyproject.toml  requirements.txt
Codes/src/dnnpype/: appDNN.py  appSound.py  convert.py  dnn.py  loss.py  model.py  opt.py
Data/: CorMatPredPred.csv  CorMatPredResp.csv  accousticIntensityModIsing.csv  flowIsingData.csv  flow_ising_data.xls  freqCutUpHeightDiam.csv  rectangularAreas.csv  tub_toe.xlsx
FEM/: pyproject.toml
FEM/src/fempype/: __init__.py  fem.py  geometry.py
Reports/: Final report.docx
Reports/ActionPlan/: brief-action-plan.tex  cli_samples.tex  cli_screen.tex  cli_units.tex  dnn_tikz.tex  psu-thesis-chicago.sty  refs.bib  report.tex
Reports/FinalPresentation/: dnn.typ  finalSlides.typ  psu-beamer.typ
Reports/FinalReport/: finalReport.typ
jnp/: pyCode.ipynb  pyCode2.ipynb  pyCode3.ipynb
