[project]
name = "dnnpype"
version = "0.1.0"
description = "DNN modeling for acoustic pipes using Flax/JAX"
license = {text = "MPL-2.0"}
authors = [
    { name = "Gabriel Pinochet-Soto", email = "gpin2@pdx.edu" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "jax",
    "flax",
    "optax",
    "sounddevice",
    "rich",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
classify_samples = "dnnpype.appSound:main"
run_model = "dnnpype.dnn:main"
convert_units = "dnnpype.convert:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dnnpype"]

[tool.black]
line-length = 79

[tool.ruff]
line-length = 79
lint.select = ["E", "F", "W", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.mccabe]
max-complexity = 10

