[project]
name = "fempype"
version = "0.1.0"
description = "FEM simulations for acoustic pipes using NGSolve"
readme = "README.md"
license = {text = "MPL-2.0"}
authors = [
    { name = "Gabriel Pinochet-Soto", email = "gpin2@pdx.edu" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "ngsolve",
    "netgen",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fempype"]
